tests/files/flow_controller_tests/should_run/043.cmdr
x = parseBool("false");
print x;