tests/files/flow_controller_tests/should_fail/030.cmdr
x = false;
print abs(x);